--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A clone of the UsabilityHub front page created using HTML and CSS.">
+    <meta property="og:title" content="UsabilityHub Front Page Clone">
+    <meta property="og:description" content="A clone of the UsabilityHub front page created using HTML and CSS.">
+    <meta property="og:image" content="https://faizan1450.github.io/UsabilityHub-Front-Page-Clone/Assets/Social%20Media%20Card.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://faizan1450.github.io/UsabilityHub-Front-Page-Clone/">
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./media-queries.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
