--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A clone of the UsabilityHub front page created using HTML and CSS.">
     <meta property="og:title" content="UsabilityHub Front Page Clone">
     <meta property="og:description" content="A clone of the UsabilityHub front page created using HTML and CSS.">
-    <meta property="og:image" content="https://faizan1450.github.io/UsabilityHub-Front-Page-Clone/Assets/Social%20Media%20Card.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Faizan1450/UsabilityHub-Front-Page-Clone/main/Assets/Social%20Media%20Card.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://faizan1450.github.io/UsabilityHub-Front-Page-Clone/">
